--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </style>
 </head>
 <body>
-  <h1>¡Bienvenido a mi página hecha de GitHub Pages!</h1>
-  <p>Accede a esta url para consultar el archivo de app-ads <a href="https://dangonrey.github.io/LaLineaEnBus/app-ads.txt"></a>.</p>
+  <h1>¡Bienvenido a mi página de GitHub Pages!</h1>
+  <p>Accede a esta url para consultar el archivo de app-ads <a href="https://dangonrey.github.io/app-ads.txt">dangonrey.github.io/app-ads.txt</a>.</p>
 </body>
 </html>
